--- a/projeto qr code/index.html
+++ b/projeto qr code/index.html
@@ -11,19 +11,24 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 </head>
-<body>
-    <div class="conteiner">
-        <header id="qr-header">
-            <h1>Gerador de QR Code</h1>
-            <p>insira uma URL ou Texto, para criar um QR Code</p>
-        </header>
 
-        <div id="qr-form">
-            <input type="text" placeholder="Digite uma URL ou Texto...">
-            <button>Gerar QR Code</button>
-        </div>
-        <div id="qr-code">
-            <img src="qrcode.png" alt="QR Code">
+
+
+<body>
+    <div class="box-degrade">
+        <div class="conteiner">
+            <header id="qr-header">
+                <h1>Gerador de QR Code</h1>
+                <p>insira uma URL ou Texto, para criar um QR Code</p>
+            </header>
+
+            <div id="qr-form">
+                <input type="text" placeholder="Digite uma URL ou Texto...">
+                <button>Gerar QR Code</button>
+            </div>
+            <div id="qr-code">
+                <img src="qrcode.png" alt="QR Code">
+            </div>
         </div>
     </div>
 </body>
